added post area content in the files

--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-.login-area{
 
+.login-area{
+width: 300px;
 float :right;
 }
+.posting-area{
 
+    width: 300px;
+   
+    float :right;
+}
 .votes{
 	float: left;
     margin-right: 7px;
