--- a/style.css
+++ b/style.css
@@ -1,32 +1,211 @@
+.pagelayout{
+    margin:auto;
+    position: absolute;
+    width:100%;
 
+}
+.wrapper{
+    overflow: hidden;
+    min-height: 1%;
+}
 .login-area{
 width: 300px;
 float :right;
 }
-.posting-area{
+header{
+    height: 4em;
+    background: linear-gradient(#56bae8,#c1dae6);
+}
+nav{
+ background: linear-gradient(#56bae8,#c1dae6);   
+}
+#search{
+    color: white;
+    font-color:black;
+}
+.search-wrapper{
+    display: inline;
+}
+.header-container{
+height: 4em;
+}
+.username{
+    color: darkgrey;
+    font-size:10px;
+    min-width: 7em;
+}
+.time{
+    color: darkgrey;
+    font-size:10px;
+    min-width: 7em;
+}
+.share{
+    color: darkgrey;
+    font-size:10px;
+    min-width: 7em;
+}
+.pages{
+    
+    background: lightgrey;
+    
+}
+.pagetitle{
+    display: inline;
+}
+.pagetitle img{
+    border-radius: 41px;
+    width:50px;
+}
+.title{
+    height:58px;
+    margin:0em;
+    width:7em;
+    margin-left:4em
+}
+.subtitles{
+    display:inline-flex;
+}
+ul.menu{
+      list-style-type: none;
+    margin-top: -29px;
+    margin-right: 12em;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    float:right;
+    width:16em;
+}
+.imageDivLink{
+    
+}
 
-    width: 300px;
-   
-    float :right;
+.contentDivImg{
+    display: none;
+   }
+ul.menu li{
+    margin-left: 1em;
+}
+ body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+main{
+    height:60em;
+    flex: 1 0 auto;
+
+}
+div.tabs{
+    position: absolute;
+    margin-top: 2em;
+    width:45em;
+    margin-left: 1em
+}
+div.tabs a{
+    padding: 1em;
+    color:#d1cea9;
+}
+
+.line{
+width:44em;
+margin:3em -16em;
+
+}
+.main-container{
+    margin: 24px;
+}
+.postsContainer{
+    margin: auto;
+    height:50em;
+    width:51em;
+    padding-top:6em;
+}
+.postname{
+    font-size: 12px;
+    color:darkcyan;
+    margin:1em 0em 0em 0em;
+}
+.posting-area{
+    width: auto;
+    height:auto;
+}
+div#modal1.modal{
+    min-height: 79%;
+    width: 34%;
+}
+.rank{
+    width: 5px;
+    float: left;
+}
+#checkbox{
+    position:static;
+    visibility: visible;
 }
 .votes{
 	float: left;
-    margin-right: 7px;
-    margin-left: 7px;
-    background: transparent;
+    margin-right: 1em;
+    margin-left: 1em;
+    background: #edf0f9;
     overflow: hidden;
+    border-radius:4px; 
 	}
-	
+    .votesNum{
+        margin: 0em;
+        font-weight: bold;
+        font-size: 10px;
+    }
+    .image{
+        width:200px;
+ }
+ i{
+    cursor:pointer ;
+ }
+ .thumbup{
+    font-size:13px;
+    color:darkgrey;
+ }
+ .thumbdown{
+  font-size:13px;
+    color:darkgrey;  
+ }
+ 	.postimage{
+    display: table-cell;
+    text-align:left;
+    vertical-align: top;
+    border-radius: 1em;
+    margin-top: 6px;
+    }
 	.Content-List {
     overflow: hidden;
-    margin-left: 3px;
+    margin-left: 9em;
+    margin-top: -5em;
     opacity: 1;
-	padding: 10px 20px;
+	padding: 0em 1em;
 }
-
+#numbering{
+    margin-top: 27px;
+}
 .postContent
 {
-	margin: 0;
-    margin-bottom: 8px;
-    padding: 20px 10px;
+	margin: 1em 1em 0em;
+    padding: 0em 1em;
+    float: left;
+    width:45em;
+    min-height:5em;
+    overflow: hidden;
+}
+.post-meta-icon{
+        text-transform: uppercase;
+    letter-spacing: 0.02em;
+    color:lightgrey;
+}
+.pagination{
+    width: 40em;
+    margin:auto;
+}
+footer{
+    margin:auto;
+    position: absolute;
+    width:100%;
+    background-color:rgba(17, 18, 23, 0.68);
 }
