--- a/style.css
+++ b/style.css
@@ -181,6 +181,20 @@ div#modal3.modal{
       font-size:20px;
     color:darkgrey; 
  }
+ .pause{
+      font-size:20px;
+    color:darkgrey; 
+ }
+ iframe{
+    padding-top:0;
+padding-bottom:0;
+padding-left:0;
+padding-right:0;
+margin-top:0;
+margin-bottom:0;
+margin-left:0;
+margin-right:0;
+ }
  	.postimage{
     display: table-cell;
     text-align:left;
